[package]
name = "brc20_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
bip32 = "0.5.1"
bip39 = "2.0.0"
bitcoin = { version = "0.31.1", features = ["serde", "rand", "rand-std"] }
bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
